server/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speakin-ingress
  namespace: speakin
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "message-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"    # 1 hour
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"    # 1 hour
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"        # Increase max body size to 50MB
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - pathType: Prefix
        path: /ws
        backend:
          service:
            name: message-service
            port:
              number: 8003
